--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="col-xl-9 mx-auto">
             <h1>Smoking Good Bordeaux</h1>
             <h2>Viandes et Poissons fumés</h2>
-            <h5>Livraison en remise en mains propres sur la région Bordelaise</h5>
+            <!-- <h5>Livraison en remise en mains propres sur la région Bordelaise</h5> -->
 <!--             <p>Nous fumons tout.. sauf la moquette</p> -->
             <a href="#orderform">
             <div class="btn btn-primary btn-lg margin"> Commander</div>
@@ -154,9 +154,10 @@
         <div class="row" style="text-align: center; justify-content: center;">
           <div style="max-width: 50%;">
           <body>
-            <h2 class="content-head is-center">Contactez-nous !</h2>
+            <h2 class="content-head is-center"> Passer Commande </h2>
             <aside>
                  <p>Vous avez des questions ou vous souhaitez passer commande ?</p>
+                 <p>Contactez-nous !</p>
                  <p>Livraison uniquement en remise en mains propres sur la région Bordelaise.</p>
              </aside>
 
@@ -191,7 +192,7 @@
 
             <!-- Customise the Thankyou Message People See when they submit the form: -->
             <div style="display:none;" id="thankyou_message">
-              <h2><em>Merci</em> nous vous recontacterons dans les plus brefs délais !</h2>
+              <h2>Merci, nous vous recontacterons dans les prochains jours</h2>
             </div>
 
             <!-- Submit the Form to Google Using "AJAX" -->
