--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg'); background-position: center;"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2>Héritage d'une cuisine traditionnelle </h2>
-            <p class="lead mb-0">La cuisson au fumoir nous rappellent des souvenirs d'enfance, lorsque notre grand père polonais fumaient la viande dans le fond du jardin (et oui, le fumoir est très présent en Pologne !).</p>
+            <p class="lead mb-0">Très présente en Pologone, la cuisson au fumoir nous rappelle des souvenirs d'enfance, lorsque notre grand père fumait la viande dans le fond du jardin.</p>
           </div>
         </div>
         <div class="row no-gutters">
