--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
       <blockquote cite="https://www.facebook.com/smokinggood33/" class="fb-xfbml-parse-ignore"> </blockquote>
     </div>
     <div class="fb-credit">
-      <a href="https://www.labnol.org/software/facebook-messenger-chat-widget/9583/" target="_blank">Facebook Chat Smoking Good Bordeaux</a>
+      <a href="https://www.facebook.com/smokinggood33/" target="_blank">Facebook Chat Smoking Good Bordeaux</a>
     </div>
     <div id="fb-root"></div>
   </div>
