--- a/index.html
+++ b/index.html
@@ -125,16 +125,16 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-              <h5>Saumon fumé</h5>
-              <p class="font-weight-light mb-0">Origine Ecosse, xx€ le kg.</p>
+              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
+              <h5>Magret fumé</h5>
+              <p class="font-weight-light mb-0">Prix sur demande</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-              <h5>Magret fumé</h5>
-              <p class="font-weight-light mb-0">Origine France, xx€ le kg.</p>
+              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
+              <h5>Saumon fumé</h5>
+              <p class="font-weight-light mb-0">35€ le kg, soit environ 17,50€ le filet.</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -157,7 +157,7 @@
             <h2 class="content-head is-center"> Passer Commande </h2>
             <aside>
                  <p>Vous avez des questions ou vous souhaitez passer commande ?</p>
-                 <p>Contactez-nous !</p>
+                 <p>Contactez-nous via messenger ou via le formulaire ci-dessous !</p>
                  <p>Livraison uniquement en remise en mains propres sur la région Bordelaise.</p>
              </aside>
 
