--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg'); background-size: contain; background-repeat: no-repeat; background-position: center; background-color: black;"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>Saveur et goût inimitables</h2>
-            <p class="lead mb-0">Fins gourmets d’origine polonaise, nous avons toujours aimé cuisiner des  plats rustiques.</p>
+            <p class="lead mb-0">Fins gourmets d’origine polonaise, nous apprécions particulièrement la cuisine rustique.</p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg'); background-position: center;"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2>Héritage d'une cuisine traditionnelle </h2>
-            <p class="lead mb-0">Très présente en Pologone, la cuisson au fumoir nous rappelle des souvenirs d'enfance, lorsque notre grand père fumait la viande dans le fond du jardin.</p>
+            <p class="lead mb-0">Très présente en Pologone, la cuisson au fumoir nous rappelle des souvenirs d'enfance.</p>
           </div>
         </div>
         <div class="row no-gutters">
