--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg'); background-position: center;"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2>Héritage d'une cuisine traditionnelle </h2>
-            <p class="lead mb-0">Très présente en Pologone, la cuisson au fumoir nous rappelle des souvenirs d'enfance.</p>
+            <p class="lead mb-0">Très présente en Pologne, la cuisson au fumoir nous rappelle des souvenirs d'enfance.</p>
           </div>
         </div>
         <div class="row no-gutters">
@@ -141,7 +141,7 @@
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
               <h5>Amandes fumées</h5>
-              <p class="font-weight-light mb-0">Un sachet offert pour tout achat.</p>
+              <p class="font-weight-light mb-0">Offre de lancement : un sachet offert pour tout achat.</p>
             </div>
           </div>
         </div>
