--- a/index.html
+++ b/index.html
@@ -127,21 +127,23 @@
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
               <h5>Magret fumé</h5>
-              <p class="font-weight-light mb-0">Prix sur demande</p>
+              <p class="font-weight-light mb-0">12€ le magret d'environ 350 grammes</p>
+              <p class="font-weight-light mb-0">(soit 35€ le kg)</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
               <h5>Saumon fumé</h5>
-              <p class="font-weight-light mb-0">35€ le kg, soit environ 17,50€ le filet.</p>
+              <p class="font-weight-light mb-0">28€ le filet d'environ 800 grammes</p>
+              <p class="font-weight-light mb-0">(soit 35€ le kg)</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
               <h5>Amandes fumées</h5>
-              <p class="font-weight-light mb-0">Offre de lancement : un sachet offert pour tout achat.</p>
+              <p class="font-weight-light mb-0">Offre de lancement : un ballotin offert pour tout achat</p>
             </div>
           </div>
         </div>
