--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
               <!-- change the form action to your script url -->
 
               <fieldset class="pure-group">
-                <input id="name" name="name" placeholder="Prénom" />
+                <input id="name" name="name" placeholder="Nom et prénom" />
               </fieldset>
 
               <fieldset class="pure-group">
                 <input id="email" name="email" type="email" value=""
-                required placeholder="Email"/>
+                required placeholder="Adresse Email"/>
                 <span id="email-invalid" style="display:none">
                   L'adresse Email doit être valide</span>
               </fieldset>
